iNNfo/packages/innfo-video-parser/src/parser/vus_parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = "\uFEFF";
  const peg$c1 = "//";
  const peg$c2 = "ANYDEO_SPEC:";
  const peg$c3 = "@@";
  const peg$c4 = "###";
  const peg$c5 = "##";
  const peg$c6 = "#";
  const peg$c7 = "@set";
  const peg$c8 = "@";
  const peg$c9 = "-";
  const peg$c10 = " ";
  const peg$c11 = ":";
  const peg$c12 = "![";
  const peg$c13 = "]";
  const peg$c14 = "(";
  const peg$c15 = ")";
  const peg$c16 = "```";
  const peg$c17 = "\r\n";

  const peg$r0 = /^[0-9]/;
  const peg$r1 = /^[^\]\n\r]/;
  const peg$r2 = /^[^)\n\r]/;
  const peg$r3 = /^[^\n]/;
  const peg$r4 = /^[ #]/;
  const peg$r5 = /^[^\n\r]/;
  const peg$r6 = /^[@\xA7]/;
  const peg$r7 = /^[a-zA-Z0-9_().\-\/]/;
  const peg$r8 = /^[ \t]/;
  const peg$r9 = /^[\n\r]/;

  const peg$e0 = peg$literalExpectation("\uFEFF", false);
  const peg$e1 = peg$literalExpectation("//", false);
  const peg$e2 = peg$literalExpectation("ANYDEO_SPEC:", false);
  const peg$e3 = peg$literalExpectation("@@", false);
  const peg$e4 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e5 = peg$literalExpectation("###", false);
  const peg$e6 = peg$literalExpectation("##", false);
  const peg$e7 = peg$literalExpectation("#", false);
  const peg$e8 = peg$literalExpectation("@set", false);
  const peg$e9 = peg$literalExpectation("@", false);
  const peg$e10 = peg$literalExpectation("-", false);
  const peg$e11 = peg$literalExpectation(" ", false);
  const peg$e12 = peg$literalExpectation(":", false);
  const peg$e13 = peg$literalExpectation("![", false);
  const peg$e14 = peg$classExpectation(["]", "\n", "\r"], true, false, false);
  const peg$e15 = peg$literalExpectation("]", false);
  const peg$e16 = peg$literalExpectation("(", false);
  const peg$e17 = peg$classExpectation([")", "\n", "\r"], true, false, false);
  const peg$e18 = peg$literalExpectation(")", false);
  const peg$e19 = peg$classExpectation(["\n"], true, false, false);
  const peg$e20 = peg$classExpectation([" ", "#"], false, false, false);
  const peg$e21 = peg$classExpectation(["\n", "\r"], true, false, false);
  const peg$e22 = peg$classExpectation(["@", "\xA7"], false, false, false);
  const peg$e23 = peg$literalExpectation("```", false);
  const peg$e24 = peg$anyExpectation();
  const peg$e25 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "(", ")", ".", "-", "/"], false, false, false);
  const peg$e26 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e27 = peg$literalExpectation("\r\n", false);
  const peg$e28 = peg$classExpectation(["\n", "\r"], false, false, false);

  function peg$f0(body) {    return { type: "Script", body: body.filter(b => b !== null) };  }
  function peg$f1() {    return null;  }
  function peg$f2() {    return null;  }
  function peg$f3(version) {
      return makeNode("GlobalProperty", { key: "video_anydeo_specification", value: version });
  }
  function peg$f4(index, name, props) {
      return makeNode("Layer", { 
        name, 
        marker: "@@",
        index: index ? parseInt(index.join("")) : undefined,
        properties: props || {}
      });
  }
  function peg$f5(marker, name, props) {
      return makeNode("Section", { name, marker, properties: props || {} });
  }
  function peg$f6(name, description, props) {
      return makeNode("Set", { name, description: description || "", properties: props || {} });
  }
  function peg$f7(ws, name, props) {
      const properties = props || {};
      const lowName = name.toLowerCase();
      const parts = name.split(/[ \t]+/);
      
      // Template definitions: @template name, @layer name, @video name
      const isTemplateDef = lowName.startsWith("template ") || 
                            lowName.startsWith("layer ") || 
                            lowName.startsWith("video ");

      if (isTemplateDef) {
        properties.block_type = "template";
        return {
          type: "Scene",
          name: parts.slice(1).join(" ") || parts[0],
          marker: "@",
          properties: properties,
          scene_templates: [],
          loc: location()
        };
      }

      // If no space after @ (e.g. @with_text), it's a scene using a template
      if (ws.length === 0) {
        const templates = [];
        let i = 0;
        templates.push(parts[0]);
        i++;
        while (i < parts.length && parts[i].startsWith('@')) {
            templates.push(parts[i].substring(1));
            i++;
        }
        
        const finalName = parts.slice(i).join(" ") || templates.join(" ");

        return {
          type: "Scene",
          name: finalName,
          marker: "@",
          properties: properties,
          scene_templates: templates,
          loc: location()
        };
      }

      return {
        type: "Scene",
        name: name,
        marker: "@",
        properties: properties,
        scene_templates: [],
        loc: location()
      };
  }
  function peg$f8(key, value) {
      return makeNode("GlobalProperty", { key, value });
  }
  function peg$f9(items) {
      return items.reduce((acc, node) => {
        if (node && node.type === "Property") {
          acc[node.key] = node.value;
        }
        return acc;
      }, {});
  }
  function peg$f10(node) {
      return node;
  }
  function peg$f11() {    return null;  }
  function peg$f12(key, value) {
      return makeNode("Property", { key, value });
  }
  function peg$f13(label, path) {
      return makeNode("Property", { key: "layer_asset_source", value: path.trim() });
  }
  function peg$f14(label, path) {
      return makeNode("GlobalProperty", { key: "layer_asset_source", value: path.trim() });
  }
  function peg$f15(content) {    return makeNode("Comment", { content: content.join("") });  }
  function peg$f16(content) {    return makeNode("Comment", { content: content.join("") });  }
  function peg$f17(content) {    return makeNode("Comment", { content: content.join("") });  }
  function peg$f18(content) {    return makeNode("Comment", { content: content.join("") });  }
  function peg$f19() {    
         const textStr = text().trim();
         if (textStr.length === 0) return null;
         return makeNode("Content", { text: textStr }); 
  }
  function peg$f20(content) {
      return content.replace(/^[\r\n]+|[\r\n\s]+$/g, "");
  }
  function peg$f21() {    return text().trim();  }
  function peg$f22() {    return text().trim();  }
  function peg$f23() {    return null;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseBOM();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = [];
    s3 = peg$parseBlock();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseBlock();
    }
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseBOM() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 65279) {
      s0 = peg$c0;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parseBlock() {
    let s0, s1;

    s0 = peg$parseSection();
    if (s0 === peg$FAILED) {
      s0 = peg$parseVusHeader();
      if (s0 === peg$FAILED) {
        s0 = peg$parseLayer();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSet();
          if (s0 === peg$FAILED) {
            s0 = peg$parseScene();
            if (s0 === peg$FAILED) {
              s0 = peg$parseGlobalProperty();
              if (s0 === peg$FAILED) {
                s0 = peg$parseComment();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseContent();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseTopLevelAssetShortcut();
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      s1 = peg$parseWhitespace();
                      if (s1 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$f1();
                      }
                      s0 = s1;
                      if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        s1 = peg$parseBlankLine();
                        if (s1 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$f2();
                        }
                        s0 = s1;
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseVusHeader() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s2 = peg$c1;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.substr(peg$currPos, 13) === peg$c2) {
        s4 = peg$c2;
        peg$currPos += 13;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseValue();
        if (s6 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s6);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLayer() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 2) === peg$c3) {
      s2 = peg$c3;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r0.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = input.charAt(peg$currPos);
          if (peg$r0.test(s4)) {
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parse_();
      s5 = peg$parseName();
      s6 = peg$parseEOL();
      if (s6 !== peg$FAILED) {
        s7 = peg$parsePropertyBlock();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f4(s3, s5, s7);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSection() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 3) === peg$c4) {
      s2 = peg$c4;
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s2 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c5) {
        s2 = peg$c5;
        peg$currPos += 2;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s2 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 35) {
          s2 = peg$c6;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e7); }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseName();
      s5 = peg$parseEOL();
      if (s5 !== peg$FAILED) {
        s6 = peg$parsePropertyBlock();
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f5(s2, s4, s6);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSet() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 4) === peg$c7) {
      s2 = peg$c7;
      peg$currPos += 4;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseKey();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parseSimpleValue();
        s7 = peg$parseEOL();
        if (s7 !== peg$FAILED) {
          s8 = peg$parsePropertyBlock();
          if (s8 === peg$FAILED) {
            s8 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f6(s4, s6, s8);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseScene() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 64) {
      s2 = peg$c8;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      s4 = peg$parse_();
      s3 = input.substring(s3, peg$currPos);
      s4 = peg$parseName();
      s5 = peg$parseEOL();
      if (s5 !== peg$FAILED) {
        s6 = peg$parsePropertyBlock();
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f7(s3, s4, s6);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGlobalProperty() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 45) {
      s2 = peg$c9;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e10); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      if (input.charCodeAt(peg$currPos) === 32) {
        s4 = peg$c10;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e11); }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (input.charCodeAt(peg$currPos) === 32) {
            s4 = peg$c10;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e11); }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseKey();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s5 = peg$c11;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e12); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            s7 = peg$parseValue();
            if (s7 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f8(s4, s7);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePropertyBlock() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsePropertyItem();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsePropertyItem();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f9(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsePropertyItem() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$currPos;
    peg$silentFails++;
    s3 = peg$parseBlockMarker();
    peg$silentFails--;
    if (s3 === peg$FAILED) {
      s2 = undefined;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parseProperty();
      if (s3 === peg$FAILED) {
        s3 = peg$parseComment();
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseEOL();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f10(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseBlankLine();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f11();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseProperty() {
    let s0, s1, s2, s3, s4, s5, s6, s7;
